--- a/package.json
+++ b/package.json
@@ -20,10 +20,12 @@
   },
   "homepage": "https://github.com/guimorone/RioChallenge#readme",
   "dependencies": {
+    "axios": "^0.26.0",
     "body-parser": "^1.19.1",
     "dotenv": "^16.0.0",
     "ejs": "^3.1.6",
-    "express": "^4.17.2"
+    "express": "^4.17.2",
+    "node-fetch": "^3.2.0"
   },
   "devDependencies": {
     "@types/express": "^4.17.13",
