--- a/package.json
+++ b/package.json
@@ -24,8 +24,7 @@
     "body-parser": "^1.19.1",
     "dotenv": "^16.0.0",
     "ejs": "^3.1.6",
-    "express": "^4.17.2",
-    "node-fetch": "^3.2.0"
+    "express": "^4.17.2"
   },
   "devDependencies": {
     "@types/express": "^4.17.13",
